[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loading"
version = "1.0.0"
description = "An exercise from python module 08 at 42"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE.md"]
authors = [
    { name = "shierro", email = "shierro@student.42urduliz.com" }
]

[tool.setuptools.packages.find]
include = ["loa"]
