[project]
name = "loading"
version = "1.0.0"
description = "Exercise 1 from Python Module 08 at 42"
authors = [
    { name = "shierro", email = "shierro@student.42urduliz.com" }
]
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.2.6,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "matplotlib>=3.10.1,<4.0.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"